Fixed oversized navbar on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,5 @@
+@use "../../mixins/respond.scss";
+
 .app{
     &__navbar{
         font-size: 1.6rem;
@@ -14,6 +16,12 @@
         border: 1px solid rgba(255,255,255, 0.25);
 
         z-index: 2;
+
+        @include respond.respond(phone){
+            font-size: 1rem;
+            padding: 1rem 1.5rem;
+
+        }
 
 
         &-links{
@@ -36,10 +44,19 @@
             flex-direction: column;
             margin: 0 1rem;
 
+            @include respond.respond(phone){
+                margin: 0 .5rem;
+                padding: .8rem 1.6rem;
+            }
+
 
             // When page is scrolled down shrink navbar
             &-scrolling{
                 font-size: 1.2rem;
+
+                @include respond.respond(phone){
+                    font-size: .8rem;
+                }
             }
         }
 
